infrastructure/config/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    gateway.k8s.rbn.is/attach-route: "true"
