infrastructure/config/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-scheme-redirect
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: http
  hostnames:
    - "rbn.is"
    - "*.rbn.is"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302
